[package]
name = "scrub-rs"
version = "0.1.0"
authors = ["Lyrise <lyrise1984@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
tracing = "0.1.29"
tracing-subscriber = "0.3.4"
sha2 = "0.10.0"
hex = "0.4.3"

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]
